#6 - Duong04 - Feature: Create api for products and categories
